# lazy_dag

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  conanfile.txt
.github/workflows/: build.yml
ci/: build_in_docker.sh  configure.sh  deb_install.sh  dep_build.sh  dep_download.sh  docker_build.sh  docker_run_0_dep_build.sh  docker_run_1_build.sh  docker_run_2_run.sh  docker_start.sh  download_dep.sh  pkg_install.sh  prepare_deb.sh  prepare_ubuntu20.sh  project_configure.sh  run_all.sh  run_in_docker.sh  setup_cmake_projects.sh  setup_gbench.sh  vcpkg_setup.sh
cmake/: cxx_setting.cmake  support_libs.cmake
cxx/: CMakeLists.txt  conanfile.txt
cxx/cmake/: cxx_setting.cmake  support_libs.cmake
cxx/src/AAD/: CMakeLists.txt  bench.cpp  dag_range.cpp  dag_tape.hpp  toyCodeChp15section2.cpp
cxx/src/math_op_bench/: CMakeLists.txt  main.cpp
cxx/src/ranges_impl/: CMakeLists.txt  bench.cpp  lazy_prime.hpp  main.cpp  range_lazy_prime.cpp  vec.hpp
et_rust/: Cargo.toml
et_rust/benches/: bench_entry.rs  heavy_math_op.rs  math_op.rs
src/: main.cpp  math_op.cpp  math_op.hpp
src/AAD/: CMakeLists.txt  bench.cpp  dag_handwritten.hpp  dag_pointer.cpp  dag_pointer.hpp  dag_range.cpp  dag_range.hpp  dag_tape.cpp  dag_template.cpp  dag_template.hpp  toyCodeChp15section2.cpp  toyCodeChp9section5.cpp  toyCodeChp9sections2to4.cpp
src/math_op_bench/: math_op.cpp  math_op.hpp
src/range_impl/: CMakeLists.txt  main.cpp  range_impl_1.cpp  ranges_example.cpp  vec.hpp
src/ranges_impl/: bench.cpp  main.cpp  vec.hpp
