[package]
name = "et_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench_entry"
harness = false

[dependencies]
chrono = "0.4.19"
criterion = "0.3.5"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"

[profile.release]
opt-level = 3
lto = "thin"
